refactor: Migrate to Java 21
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.java.migrate.UpgradeToJava21?organizationId=R29vZ2xl

Co-authored-by: Moderne <team@moderne.io>